cicd/production/tekton/ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/instance: tekton-dashboard
    app.kubernetes.io/name: tekton-dashboard

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tekton.prod.ftscode.de
      secretName: tekton-dashboard-tls
  rules:
    - host: tekton.prod.ftscode.de
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
